style.css
body {
  font-family: 'Lato', sans-serif;
}


form {
  border: 2px solid #FF385C;
  padding: 10px;
}

form label {
  font-weight: bold;
}

form div {
  display: flex;
  justify-content: space-between;
}

form select, form input {
  margin-bottom: 20px;
  width: 140px;
}

form button {
  background-color: #FF385C;
  border: none;
  color: #fff;
  font-size: 24px;
  padding: 15px;
  width: 100%;
}


h2 {
  font-size: 26px;
  font-weight: 400;
  margin: 0 10px 10px 10px;
  text-align: center;
}

h3 {
  font-size: 18px;
  font-weight: 500;
}

p {
  line-height: 1.5em;
  margin: 0;
}

section {
  padding: 20px;
}

section.alternate-background {
  background-color: #00A699;
  color: #fff;
}

main img {
  width: 100%;
}



.item {
  flex: 1;
  margin: 10px;
}

.group {
  display: flex;
  flex-direction: column;
}

.item-double {
  flex: 2;
}



.logo {
  font-family: "Pangolin", cursive;
  font-size: 57px;
  color: #fff;
}


header {
  background-color: #FF385C;
  padding: 20px 20px 0 20px;
  text-align: center;
}
header nav {
  display: flex;
  justify-content: center;
}

header nav ul {
  display: flex;
}

header nav ul li {
  list-style-type: none;
}

header nav ul li a {
  color: #fff;
  text-decoration: none;
  padding: 0 20px 0 0;
}

header nav ul li a:hover {
  color: #bdbdbd;
  text-decoration: none;
}



footer {
  background-color: #FF385C;
}

footer p {
  color: #fff;
  text-align: center;
  padding: 20px;
}


@media all and (min-width: 480px) {
  form {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap
  }

  form div {
    flex-direction: column;
  }

  form button {
    flex: 1;
  }
  
  form select, form input {
    margin-bottom: 0px;
  }
  form select, form input {
    margin-bottom: 20px;
    width: 180px;
  }
  

  header {
    display: flex;
    justify-content: space-between;
    padding: 0;
  }

  .logo {
    margin: 14px 0 14px 20px;
    padding-top: 0;
    font-size: 42px;
  }

  
  
  header nav ul {
    align-items: center;
  }

  .group {
    flex-direction: row;
    align-items: center;
  }

}

